manifests/deploy-webui.yaml
##
## Frontend service web-ui
##
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: web-ui-deployment
  labels:
    name: web-ui-deployment
    app: helloWorld
    version: "1.0.1"

spec:
  replicas: 3
  template:
    metadata:
      name: web-ui
      labels:
        name: web-ui
        app: helloWorld
        version: "1.0.1"
    spec:
      restartPolicy: Always

      volumes:
        # Create volume from configMap (key/value --> filename/file content)
        - name: config-volume
          configMap:
            name: config


      containers:
        - name: web-ui
          image: faxg/hello-world-web:latest

          livenessProbe:
              initialDelaySeconds: 1
              periodSeconds: 5
              httpGet:
                path: /health
                port: 5000
          readinessProbe:
              initialDelaySeconds: 2
              periodSeconds: 5
              httpGet:
                path: /ready
                port: 5000
          # Inject all environment vars by referencing configMap
          #envFrom:
          #  configMapRef:
          #    name: config
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/hello-world
              name: config-volume
---
##
## Expose as service using NodePort
##
kind: Service
apiVersion: v1
metadata:
  name: web-ui
  labels:
    name: web-ui
    app: helloWorld
    version: "1.0.1"

spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    name: web-ui
    app: helloWorld
    version: "1.0.1"

---
##
## Expose to external clients as Ingress
##
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    name: hello-world-ingress
    app: helloWorld
    version: "1.0.1"

spec:
  rules:
  #- host: "localhost"
  - http:
      paths:
      - path: /hello-world
        backend:
          serviceName: web-ui
          servicePort: 80
